# VelixFlow

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: ElixirCoreConfig.cmake.in  VelixFlowConfig.cmake.in  embed_shader.cmake
include/ElixirCore/: AnimatorComponent.hpp  Application.hpp  AssetsCache.hpp  AssetsLoader.hpp  AudioComponent.hpp  AudioSystem.hpp  BinaryLoader.hpp  Buffer.hpp  CameraComponent.hpp  Common.hpp  Component.hpp  DebugLine.hpp  DebugTextHolder.hpp  DefaultMacros.hpp  DepthFrameBuffer.hpp  DrawCall.hpp  Filesystem.hpp  FrameBuffer.hpp  GameObject.hpp  LibrariesLoader.hpp  Light.hpp  LightComponent.hpp  LightManager.hpp  MainWindow.hpp  Mesh.hpp  MeshComponent.hpp  Model.hpp  Mouse.hpp  ParticleComponent.hpp  Physics.hpp  Raycasting.hpp  Scene.hpp  SceneManager.hpp  Script.hpp  ScriptComponent.hpp  ScriptMacros.hpp  ScriptsRegister.hpp  ShaderManager.hpp  ShadowHandler.hpp  ShadowRender.hpp  (+9 more)
include/VelixFlow/: Assets.hpp  AssetsCache.hpp  BinaryLoader.hpp  BinarySerializer.hpp  CameraComponent.hpp  Color.hpp  DefaultRender.hpp  Drawable.hpp  Filesystem.hpp  Keyboard.hpp  LibrariesLoader.hpp  Logger.hpp  Material.hpp  Mesh.hpp  Model.hpp  ParticleEmitter.hpp  ParticleSystem.hpp  Physics.hpp  ReflectedObject.hpp  Render.hpp  Renderer.hpp  RigidbodyComponent.hpp  Scene.hpp  ScriptMacros.hpp  ScriptSystem.hpp  Shader.hpp  ShaderManager.hpp  Signal.hpp  Texture.hpp  UIElement.hpp  UIRender.hpp  Window.hpp
resources/shaders/: billboard.frag  billboard.vert  cube.frag  cube.vert  default.frag  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  line.frag  particle.frag  particle.vert  shadow.frag  shadow.vert  shadow_debug.frag  shadow_map.frag  skeleton.frag  skeleton.vert  skeleton_shadow.vert  ui.frag  ui.vert
scripts/: build_physx_linux.sh  build_physx_windows.bat
src/: AnimatorComponent.cpp  Application.cpp  AssetsCache.cpp  AssetsLoader.cpp  AudioComponent.cpp  AudioSystem.cpp  BinaryLoader.cpp  Buffer.cpp  CameraComponent.cpp  DebugLine.cpp  DebugTextHolder.cpp  DefaultRender.cpp  DepthFrameBuffer.cpp  DrawCall.cpp  FrameBuffer.cpp  GameObject.cpp  Keyboard.cpp  LibrariesLoader.cpp  LightComponent.cpp  LightManager.cpp  Logger.cpp  MainWindow.cpp  Material.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  ParticleComponent.cpp  ParticleEmitter.cpp  ParticleSystem.cpp  Physics.cpp  Raycasting.cpp  Renderer.cpp  RigidbodyComponent.cpp  Scene.cpp  SceneManager.cpp  ScriptComponent.cpp  ScriptSystem.cpp  ScriptsRegister.cpp  Shader.cpp  ShaderManager.cpp  (+12 more)
